2004-11-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, include/pqxx.pipeline.hxx:
  - Made inclusion of <limits> conditional on PQXX_HAVE_LIMITS
  - Fall back on INT_MAX/INT_MIN workaround if no <limits> available
 include/pqxx/result.hxx:
  - Remove assignment, comparison between reverse and regular iterators
  - Fixes problems with g++ 2.95
 src/util.cxx:
  - Include <unistd.h> if available
  - Make uses of locale conditional on PQXX_HAVE_LOCALE
 test/test058.cxx:
  - Removed unused largeobject variable
2004-11-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualC++.NET-2003/config-internal.compiler.h,
 config/sample-headers/libpq/7.4/config-internal-libpq.h,
 config/sample-headers/libpq/7.4/config-public-libpq.h:
  - Fixed PQXX_SELECT_ACCEPTS_NULL
  - Disabled PQXX_HAVE_SLEEP
  - Enabled PQXX_HAVE_PQEXECPREPARED
  - Thanks Patrick Kimber
 include/pqx/connection.hxx:
  - Call PQconnectdb() inside PQXXPQ namespace, thanks Patrick Kimber
 include/pqxx/result.hxx:
  - Workarounds for Visual C++.NET 2003, thanks Patrick Kimber
 win32/common:
  - Enabled STD definition, thanks Patrick Kimber
2004-11-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transactor.hxx:
  - Renamed OnCommit/OnAbort/OnDoubt to on_commit/on_abort/on_doubt
  - Anonymized unused (but significant) OnAbort() parameter to silence warning
 src/transaction_base.cxx:
  - Check for broken connection before going into commit attempt
2004-11-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 - doc/Makefile.am:
  - Filter progress messages out of doxygen output
 - include/pqxx/*.hxx:
  - Retouched Doxygen documentation
  - Removed unneeded includes
 - include/pqxx/dbtransaction.hxx:
  - Removed startcommand() and StartCmd()
  - Un-inlined code
 - include/pqxx/util.hxx, src/pipeline.cxx, src/cursor.cxx:
  - Removed assert code
 - src/dbtransaction.cxx:
  - New
 - src/Makefile.am:
  - Added dbtransaction.cxx
2004-11-08  Jeroen T. Vermeulen <jtv@xs4all.nl>